樣式調整完成

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hang">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,8 +10,8 @@
   <div class="wrapper">
     <header class="container">
       <div class="row">
-        <a href="#" class="col-12 text-center navbar-brand Alabaster">
-          <img src="./img/LOGO.png" class="d-inline-block align-top">
+        <a href="#" class="col-12 text-center navbar-brand Alabaster py-3 py-md-4 py-lg-5">
+          <img src="./img/LOGO_2.png" class="d-inline-block align-top">
         </a>
       </div>
     </header>
@@ -23,14 +23,14 @@
           </span>
         </p>
       </div>
-      <div class="row opacity text-center mt-2">
-        <a href="insidePage.html#tab1" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3 gopage active">
+      <div class="row opacity text-center mt-2 bd-radiustop-30">
+        <a href="insidePage.html#tab1" class="col-sm-6 col-md-6 col-lg-4 col-xl-4 fill p-3 gopage active">
           <div class="my-3 my-lg-2">
             <img class="section-item-icon" src="./img/leading_page/application.png">
           </div>
           <button class="btn2 TealBlue">活動申請</button>
         </a>
-        <a href="insidePage.html#tab2" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3 gopage">
+        <a href="insidePage.html#tab2" class="col-sm-6 col-md-6 col-lg-4 col-xl-4 fill p-3 gopage">
           <div class="my-3 my-lg-2">
             <img class="section-item-icon" src="./img/leading_page/warning.png">
           </div>
@@ -39,31 +39,31 @@
             礙航/射擊通報
           </button>
         </a>
-        <a href="insidePage.html#tab3" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3">
+        <a href="insidePage.html#tab3" class="col-sm-6 col-md-6 col-lg-4 col-xl-4 fill p-3">
           <div class="  my-3 my-lg-2">
             <img class="section-item-icon" src="./img/leading_page/recreation.png">
           </div>
           <button class="btn2 TealBlue">遊憩查詢</button>
         </a>
-        <a href="insidePage.html#tab4" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3" id="weatherPage">
+        <a href="insidePage.html#tab4" class="col-sm-6 col-md-6 col-lg-4 col-xl-4 fill p-3" id="weatherPage">
           <div class="  my-3 my-lg-2">
             <img class="section-item-icon" src="./img/leading_page/weather.png">
           </div>
           <button class="btn2 TealBlue">氣象海情</button>
         </a>
-        <a href="insidePage.html#tab5" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3">
+        <a href="insidePage.html#tab5" class="col-sm-6 col-md-6 col-lg-4 col-xl-4 fill p-3">
             <div class="  my-3 my-lg-2">
               <img class="section-item-icon" src="./img/leading_page/law.png">
             </div>
             <button class="btn2 TealBlue">法令資訊</button>
         </a>
-        <a href="map.html?uuid=df595e60-6287-4623-8317-4b8d6f82e2e5" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3">
+        <a href="map.html?uuid=df595e60-6287-4623-8317-4b8d6f82e2e5&panel=海情/海象資訊" class="col-sm-6 col-md-6 col-lg-4 col-xl-4 fill p-3">
           <div class="  my-3 my-lg-2">
             <img class="section-item-icon" src="./img/leading_page/cctv.svg">
           </div>
           <button class="btn2 TealBlue">海況影像</button>
         </a>
-        <a href="insidePage.html#tab6" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3">
+        <a href="map.html" class="col-sm-6 col-md-6 col-lg-4 col-xl-4 fill p-3">
           <div class="  my-3 my-lg-2">
             <img class="section-item-icon rounded-circle" src="./img/leading_page/taiwanmap.png">
           </div>
@@ -80,14 +80,16 @@
     
               若屬全面性禁止事項或禁止採捕海域動、植物，例如海洋保育署公告之保育物種、漁業署公告之禁用漁法或禁止採捕魚種，即使沒在個別海域之法令中敘述，仍屬應遵守之規定。
     
-              使用者進入本系統，視同同意上開使用規範。本系統所有資料僅限正常查詢、瀏覽使用，未經本會同意之大量抄錄或複製資料行為，將依違反著作權法及妨礙電腦使用罪辦理。</span><h6 id="myBtn" style="cursor: pointer;">更多 </p>
+              使用者進入本系統，視同同意上開使用規範。本系統所有資料僅限正常查詢、瀏覽使用，未經本會同意之大量抄錄或複製資料行為，將依違反著作權法及妨礙電腦使用罪辦理。</span>
+            </p>
+            <h6 id="myBtn" class="btn">更多</h6> 
           </div>
         </div>
       </div>
     </div>
   </div>
-  <footer class="container text-center mt-2 footer">
-    <div class="row pt-3 opacity">
+  <footer class="container text-center mt-2 footer rounded-3">
+    <div class="row opacity pt-3 rounded-3">
       <h6 class="col-12 col-sm-4 col-lg-2">&copy海洋委員會</h6>
       <h6 class="col-12 col-sm-8 col-lg-4">高雄市前鎮區成功二路25號4樓</h6>
       <h6 class="col-12 col-sm-4 col-lg-2">(07)338-1810</h6>
@@ -96,6 +98,8 @@
       </h6>
     </div>
   </footer>
-
+  <div id="stop" class="scrollTop">
+    <span><a href="">Top</a></span>
+  </div>
 </body>
 </html>
