--- a/src/insidePage.html
+++ b/src/insidePage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hang">
 	<head>
 		<title>海洋委員會一站式平台</title>
 		<meta charset="utf-8">
@@ -71,10 +71,10 @@
 		</div>
 		<div class="wrapper wrapper-middle">
 			<section class="tab-content">
-				<div class="item1 container mt-3" id="tab1">
+				<div class="item1 container" id="tab1">
 					<div class="row">
 						<div class="col-12">
-							<h3 class="TealBlue">活動申請</h3>
+							<h3 class="TealBlue inside-title p-2  mt-2">活動申請</h3>
 							<h5 class="text-justify">為提供民眾方便友善之橫向連結資訊，目前提供相關磯釣活動申請、遊艇申辦服務流程說明、龜山島登島申請與台江公園國家水域等海灣活動需提供申請之流程
 							</h5>
 						</div>
@@ -144,7 +144,7 @@
 					</div>
 					<div class="row">
 						<div class="col-12">
-							<h3 class="TealBlue">相關連結</h3>
+							<h3 class="TealBlue inside-title p-2  mt-2">相關連結</h3>
 							<h5 class="text-justify">
 								提供漁船管理辦法、賞鯨指南PDF、藍色公路
 							</h5>
@@ -247,32 +247,32 @@
 				<div class="item2 container mt-3" id="tab2" style="display: none;">
 					<div class="row tab2">
 						<div class="col-12 col-md-6 col-lg-6 col-xl-6">
-							<h3 class="TealBlue">禁止水域</h3>
+							<h3 class="TealBlue inside-title p-2  mt-2">禁止水域</h3>
 							<div class="card">
 								<div class="card-body">
 									<div class="card-title">
 										<h5>依兩岸人民關係條例施行細則規定，領海基線往外推12浬，為我國的禁止水域。</h5>
 									</div>
-									<div class="card-text">
+									<div class="card-text text-center">
 										<img src="./img/lightbox_page/Marketing _Isometric.svg" class="Isometric">
 										<a href="map.html?cate=force&uuid=df595e60-6287-4623-8317-4b8d6f82e2e5&panel=礙航/射擊通報">
-											<button class="btn2 TealBlue">前往禁止水域圖台</button>
+											<button class="btn2 TealBlue m-3 ">前往禁止水域圖台</button>
 										</a>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-12 col-md-6 col-lg-6 col-xl-6">
-							<h3 class="TealBlue mt-3 mt-md-0 mt-lg-0 mt-xl-0s">礙航、射擊通報</h3>
+							<h3 class="TealBlue inside-title p-2  mt-2 mt-3 mt-md-0 mt-lg-0 mt-xl-0s">礙航、射擊通報</h3>
 							<div class="card">
 								<div class="card-body">
 									<div class="card-title">
 										<h5>國防部陸海空司令部專案演訓實施對海(空)實彈射擊，為策安全，請即轉知轄屬漁民（船）於上開期間出海作業時，應避開實彈射擊之危險區域，以維航安。</h5>
 									</div>
-									<div class="card-text">
+									<div class="card-text text-center">
 										<img src="./img/lightbox_page/Military_Isometric.svg" class="Isometric">
 										<a href="map.html?cate=force&uuid=df595e60-6287-4623-8317-4b8d6f82e2e5&panel=礙航/射擊通報">
-											<button class="btn2 TealBlue">前往礙航、射擊通報圖台</button>
+											<button class="btn2 TealBlue m-3 ">前往礙航、射擊通報圖台</button>
 										</a>
 									</div>
 								</div>
@@ -319,8 +319,8 @@
 							</a>
 						</div>
 						<div class="col-12 col-md-6 col-xl-6 d-flex justify-content-center align-items-center">
-							<fieldset class="d-inline-block">
-								<legend class="d-inline-block w-unset me-3">
+							<fieldset class="d-inline-block inside-title p-2">
+								<legend class="d-inline-block m-0 p-0">
 									<label for="two">設施</label>
 								</legend>
 								<div class="d-inline-block">
@@ -345,14 +345,14 @@
 							<img src="./img/lightbox_page/windy.png" class="card-img-top item4-icon">
 							<div class="card-body">
 								<h5 class="card-title">Windy</h5>
-								<p class="card-text">(外部連結)</p>
+								<p class="card-text text-center">(外部連結)</p>
 							</div>
 						</a>
 						<a class="card m-3" href="https://safesee.cwb.gov.tw/V2/">
 							<img src="./img/lightbox_page/cwb.png" class="card-img-top item4-icon">
 							<div class="card-body">
 								<h5 class="card-title">台灣氣象災防平台</h5>
-								<p class="card-text">(外部連結)</p>
+								<p class="card-text text-center">(外部連結)</p>
 							</div>
 						</a>
 						<a class="card m-3" href="map.html?uuid=b7d12861-af3f-4cc0-847a-7d080ab03da0">
@@ -414,7 +414,7 @@
 				<div class="item5 container mt-3" id="tab5" style="display: none;">
 					<div class="row tab5 justify-content-center">
 						<div class="col-12">
-							<h3 class="TealBlue">法令資訊</h3>
+							<h3 class="TealBlue inside-title p-2  mt-2">法令資訊</h3>
 							<div class="card">
 								<div class="card-body">
 									<div class="card-title">
@@ -423,7 +423,7 @@
 									<div class="card-text text-center">
 										<img src="./img/lightbox_page/Book Lover_Isometric.svg" class="Isometric">
 										<a href="map.html?catelog=law">
-											<button class="btn2 TealBlue">前往法令資訊圖台</button>
+											<button class="btn2 TealBlue m-3 ">前往法令資訊圖台</button>
 										</a>
 									</div>
 								</div>
@@ -434,7 +434,7 @@
 				<div class="item6 container mt-3" id="tab6" style="display: none;">
 					<div class="row tab6 justify-content-center">
 						<div class="col-12 col-md-8 col-lg-6 col-xl-6">
-							<h3 class="TealBlue">海況影像</h3>
+							<h3 class="TealBlue inside-title p-2  mt-2">海況影像</h3>
 							<div class="card">
 								<div class="card-body">
 									<div class="card-title">
@@ -443,7 +443,7 @@
 									<div class="card-text text-center">
 										<img src="./img/lightbox_page/Surfing_Isometric.svg" class="Isometric">
 										<a href="map.html">
-											<button class="btn2 TealBlue">前往海況影像圖台</button>
+											<button class="btn2 TealBlue m-3 ">前往海況影像圖台</button>
 										</a>
 									</div>
 								</div>
@@ -454,8 +454,8 @@
 	
 			</section>
 		</div>
-		<footer class="container text-center mt-2">
-			<div class="row opacity">
+		<footer class="container text-center mt-2 rounded-3">
+			<div class="row opacity pt-3 rounded-3">
 				<h6 class="col-12 col-sm-4 col-lg-2">&copy海洋委員會</h6>
 				<h6 class="col-12 col-sm-8 col-lg-4">高雄市前鎮區成功二路25號4樓</h6>
 				<h6 class="col-12 col-sm-4 col-lg-2">(07)338-1810</h6>
@@ -464,5 +464,8 @@
 				</h6>
 			</div>
 		</footer>
+		<div id="stop" class="scrollTop">
+			<span><a href="">Top</a></span>
+		</div>
 	</body>
 </html>
