--- a/src/index2.html
+++ b/src/index2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hang">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -196,7 +196,7 @@
   <header class="container">
     <div class="row">
       <a href="#" class="col-12 text-center navbar-brand Alabaster">
-        <img src="./img/LOGO.png" class="d-inline-block align-top">
+        <img src="./img/LOGO_2.png" class="d-inline-block align-top">
       </a>
     </div>
   </header>
@@ -208,8 +208,8 @@
         </span>
       </p>
     </div>
-    <div class="row opacity text-center mt-2">
-      <a href="map.html?cate=force&uuid=df595e60-6287-4623-8317-4b8d6f82e2e5&panel=礙航/射擊通報" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3 gopage">
+    <div class="row opacity text-center mt-2 bd-radiustop-30">
+      <a href="map.html?cate=force&uuid=df595e60-6287-4623-8317-4b8d6f82e2e5&panel=礙航/射擊通報" class="col-sm-6 col-md-6 col-lg-4 col-xl-4 fill p-3 gopage">
         <div class="my-3 my-lg-2">
           <img class="section-item-icon" src="./img/leading_page/warning.png">
         </div>
@@ -218,31 +218,31 @@
           礙航/射擊通報
         </button>
       </a>
-      <a href="#" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3" data-bs-toggle="modal" data-bs-target="#exampleModal">
+      <a href="#" class="col-sm-6 col-md-6 col-lg-4 col-xl-4 fill p-3" data-bs-toggle="modal" data-bs-target="#exampleModal">
         <div class="  my-3 my-lg-2">
           <img class="section-item-icon" src="./img/leading_page/recreation.png">
         </div>
         <button class="btn2 TealBlue">遊憩查詢</button>
       </a>
-      <a href="#" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+      <a href="#" class="col-sm-6 col-md-6 col-lg-4 col-xl-4 fill p-3" data-bs-toggle="modal" data-bs-target="#exampleModal2">
         <div class="  my-3 my-lg-2">
           <img class="section-item-icon" src="./img/leading_page/weather.png">
         </div>
         <button class="btn2 TealBlue">氣象海情</button>
       </a>
-      <a href="map.html?catelog=law" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3">
+      <a href="map.html?catelog=law" class="col-sm-6 col-md-6 col-lg-4 col-xl-4 fill p-3">
           <div class="  my-3 my-lg-2">
             <img class="section-item-icon" src="./img/leading_page/law.png">
           </div>
           <button class="btn2 TealBlue">法令資訊</button>
       </a>
-      <a href="map.html?uuid=df595e60-6287-4623-8317-4b8d6f82e2e5" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3">
+      <a href="map.html?uuid=df595e60-6287-4623-8317-4b8d6f82e2e5&panel=海情/海象資訊" class="col-sm-6 col-md-6 col-lg-4 col-xl-4 fill p-3">
         <div class="  my-3 my-lg-2">
           <img class="section-item-icon" src="./img/leading_page/cctv.svg">
         </div>
         <button class="btn2 TealBlue">海況影像</button>
       </a>
-      <a href="map.html" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3">
+      <a href="map.html" class="col-sm-6 col-md-6 col-lg-4 col-xl-4 fill p-3">
         <div class="  my-3 my-lg-2">
           <img class="section-item-icon rounded-circle" src="./img/leading_page/taiwanmap.png">
         </div>
@@ -436,7 +436,7 @@
     </div>
   </div>
   <footer class="container text-center mt-2">
-    <div class="row pt-3 opacity">
+    <div class="row opacity pt-3 rounded-3">
       <h6 class="col-12 col-sm-4 col-lg-2">&copy海洋委員會</h6>
       <h6 class="col-12 col-sm-8 col-lg-4">高雄市前鎮區成功二路25號4樓</h6>
       <h6 class="col-12 col-sm-4 col-lg-2">(07)338-1810</h6>
