--- a/src/insidePage.html
+++ b/src/insidePage.html
@@ -11,7 +11,7 @@
 			<section class="nav-wrapper container">
 				<div class="row">
 					<a href="./index.html" class="col-12 text-center navbar-brand Alabaster">
-						<img src="./img/LOGO.png" class="d-inline-block align-top">
+						<img src="./img/LOGO_2.png" class="d-inline-block align-top">
 					</a>
 				</div>
 			</section>
@@ -74,7 +74,7 @@
 				<div class="item1 container" id="tab1">
 					<div class="row">
 						<div class="col-12">
-							<h3 class="TealBlue inside-title p-2  mt-2">活動申請</h3>
+							<h3 class="TealBlue inside-title p-2 mt-2">活動申請</h3>
 							<h5 class="text-justify">為提供民眾方便友善之橫向連結資訊，目前提供相關磯釣活動申請、遊艇申辦服務流程說明、龜山島登島申請與台江公園國家水域等海灣活動需提供申請之流程
 							</h5>
 						</div>
