首頁三半成品

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,9 @@
   <div class="wrapper">
     <header class="container">
       <div class="row">
-        <a href="#" class="col-12 text-center navbar-brand Alabaster py-3">
-          <img src="./img/LOGO_2.png" class="d-inline-block align-top">
+        <a href="#" class="col-12 text-center navbar-brand Alabaster py-3 d-flex justify-content-center align-items-center">
+          <img src="./img/LOGO.png" class="d-inline-block align-top logo">
+          <img src="./img/logoOCA.png" class="oca ms-3">
         </a>
       </div>
     </header>
@@ -24,13 +25,13 @@
         </p>
       </div>
       <div class="row opacity text-center mt-2 bd-radiustop-30">
-        <a href="insidePage.html#tab1" class="col-sm-6 col-md-6 col-lg-4 col-xl-4 fill p-3 gopage active">
+        <a href="insidePage.html#tab1" class="col-sm-6 col-md-4 col-lg-4 col-xl-4 fill p-3 gopage active">
           <div class="my-3 my-lg-2">
             <img class="section-item-icon" src="./img/leading_page/application.png">
           </div>
           <button class="btn2 TealBlue">活動申請</button>
         </a>
-        <a href="insidePage.html#tab2" class="col-sm-6 col-md-6 col-lg-4 col-xl-4 fill p-3 gopage">
+        <a href="insidePage.html#tab2" class="col-sm-6 col-md-4 col-lg-4 col-xl-4 fill p-3 gopage">
           <div class="my-3 my-lg-2">
             <img class="section-item-icon" src="./img/leading_page/warning.png">
           </div>
@@ -39,31 +40,31 @@
             礙航/射擊通報
           </button>
         </a>
-        <a href="insidePage.html#tab3" class="col-sm-6 col-md-6 col-lg-4 col-xl-4 fill p-3">
+        <a href="insidePage.html#tab3" class="col-sm-6 col-md-4 col-lg-4 col-xl-4 fill p-3">
           <div class="  my-3 my-lg-2">
             <img class="section-item-icon" src="./img/leading_page/recreation.png">
           </div>
           <button class="btn2 TealBlue">遊憩查詢</button>
         </a>
-        <a href="insidePage.html#tab4" class="col-sm-6 col-md-6 col-lg-4 col-xl-4 fill p-3" id="weatherPage">
+        <a href="insidePage.html#tab4" class="col-sm-6 col-md-4 col-lg-4 col-xl-4 fill p-3" id="weatherPage">
           <div class="  my-3 my-lg-2">
             <img class="section-item-icon" src="./img/leading_page/weather.png">
           </div>
           <button class="btn2 TealBlue">氣象海情</button>
         </a>
-        <a href="insidePage.html#tab5" class="col-sm-6 col-md-6 col-lg-4 col-xl-4 fill p-3">
+        <a href="insidePage.html#tab5" class="col-sm-6 col-md-4 col-lg-4 col-xl-4 fill p-3">
             <div class="  my-3 my-lg-2">
               <img class="section-item-icon" src="./img/leading_page/law.png">
             </div>
             <button class="btn2 TealBlue">法令資訊</button>
         </a>
-        <a href="map.html?uuid=df595e60-6287-4623-8317-4b8d6f82e2e5&panel=海情/海象資訊" class="col-sm-6 col-md-6 col-lg-4 col-xl-4 fill p-3">
+        <a href="map.html?uuid=df595e60-6287-4623-8317-4b8d6f82e2e5&panel=海情/海象資訊" class="col-sm-6 col-md-4 col-lg-4 col-xl-4 fill p-3">
           <div class="  my-3 my-lg-2">
             <img class="section-item-icon" src="./img/leading_page/cctv.svg">
           </div>
           <button class="btn2 TealBlue">海況影像</button>
         </a>
-        <a href="map.html" class="col-sm-6 col-md-6 col-lg-4 col-xl-4 fill p-3">
+        <a href="map.html" class="col-sm-6 col-md-4 col-lg-4 col-xl-4 fill p-3">
           <div class="  my-3 my-lg-2">
             <img class="section-item-icon rounded-circle" src="./img/leading_page/taiwanmap.png">
           </div>
@@ -107,7 +108,7 @@
     </div>
   </footer>
   <div id="stop" class="scrollTop">
-    <span><a href="">Top</a></span>
+    <img src="./img/up-arrow2.svg">
   </div>
 </body>
 </html>
