--- a/src/index2.html
+++ b/src/index2.html
@@ -192,11 +192,11 @@
       </div>
     </div>
   </div>
-  <div id="container"></div>
   <header class="container">
     <div class="row">
-      <a href="#" class="col-12 text-center navbar-brand Alabaster">
-        <img src="./img/LOGO_2.png" class="d-inline-block align-top">
+      <a href="#" class="col-12 text-center navbar-brand Alabaster py-3 d-flex justify-content-center align-items-center">
+        <img src="./img/LOGO.png" class="d-inline-block align-top logo">
+        <img src="./img/logoOCA.png" class="oca ms-3">
       </a>
     </div>
   </header>
