--- a/src/insidePage.html
+++ b/src/insidePage.html
@@ -10,8 +10,9 @@
 		<div class="wrapper-top">
 			<section class="nav-wrapper container">
 				<div class="row">
-					<a href="./index.html" class="col-12 text-center navbar-brand Alabaster">
-						<img src="./img/LOGO_2.png" class="d-inline-block align-top">
+					<a href="./index.html" class="col-12 text-center navbar-brand Alabaster py-3 d-flex justify-content-center align-items-center">
+						<img src="./img/LOGO.png" class="d-inline-block align-top logo">
+						<img src="./img/logoOCA.png" class="oca ms-3">
 					</a>
 				</div>
 			</section>
@@ -318,7 +319,7 @@
 								<h2><span class="text-white">花式滑水</span></h2>
 							</a>
 						</div>
-						<div class="col-12 col-md-6 col-xl-6 d-flex justify-content-center align-items-center">
+						<div class="col-12 col-md-6 col-xl-3 d-flex justify-content-center align-items-center">
 							<fieldset class="d-inline-block inside-title p-2">
 								<legend class="d-inline-block m-0 p-0">
 									<label for="two">設施</label>
@@ -332,10 +333,10 @@
 										<option value="D">水中活動</option>
 									</select>
 								</div>
+								<img src="./img/lightbox_page/magnifying-glass.svg" class="search ps-2">
 							</fieldset>
-							<form action="" class="ps-3">
-								<img src="./img/lightbox_page/magnifying-glass.svg" class="search">
-							</form>
+							<!-- <form action="" class="ps-3">
+							</form> -->
 						</div>
 					</div>
 				</div>	
