--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-Hang">
+<html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
       <div class="row">
         <a href="#" class="col-12 text-center navbar-brand Alabaster py-3 d-flex justify-content-center align-items-center">
           <img src="./img/LOGO.png" class="d-inline-block align-top logo">
-          <img src="./img/logoOCA.png" class="oca ms-3">
+          <img src="./img/logoOCA.png" class="oca ms-1 ms-sm-2 ms-md-3">
         </a>
       </div>
     </header>
@@ -58,7 +58,7 @@
             </div>
             <button class="btn2 TealBlue">法令資訊</button>
         </a>
-        <a href="map.html?uuid=df595e60-6287-4623-8317-4b8d6f82e2e5&panel=海情/海象資訊" class="col-sm-6 col-md-4 col-lg-4 col-xl-4 fill p-3">
+        <a href="insidePage.html#tab6" class="col-sm-6 col-md-4 col-lg-4 col-xl-4 fill p-3">
           <div class="  my-3 my-lg-2">
             <img class="section-item-icon" src="./img/leading_page/cctv.svg">
           </div>
