--- a/src/index2.html
+++ b/src/index2.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="zh-Hang">
+<html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>海委會一站式入口網站</title>
 </head>
 <body>
+  <div id="container"></div>
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-scrollable">
@@ -72,19 +73,6 @@
 							</form>
 						</div>
           </div>
-              <!-- <fieldset class="d-inline-block">
-                <legend class="d-inline-block w-unset me-2">
-                  <label for="one">地區</label>
-                </legend>
-                <div class="d-inline-block">
-                  <select name="one" class="form-select" aria-label="Default select example">
-                    <option selected>請選擇</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
-                  </select>
-                </div>
-              </fieldset> -->
         </div>
       </div>
     </div>
@@ -99,7 +87,7 @@
         </div>
         <div class="modal-body">
           <div class="row text-center">
-            <div class="col col-lg-6 col-xl-6">
+            <div class="col-6 col-sm-4">
               <a class="weather-contentBlock" href="https://www.windy.com/?23.652,121.278,8">
                 <img src="./img/lightbox_page/windy.png" class="item4-icon">
                 <div>
@@ -108,7 +96,7 @@
                 </div>
               </a>
             </div>
-            <div class="col col-lg-6 col-xl-6">
+            <div class="col-6 col-sm-4">
               <a class="weather-contentBlock" href="https://safesee.cwb.gov.tw/V2/">
                 <img src="./img/lightbox_page/cwb.png" class="item4-icon">
                 <div>
@@ -117,7 +105,7 @@
                 </div>
               </a>
             </div>
-            <div class="col col-lg-6 col-xl-6">
+            <div class="col-6 col-sm-4">
               <a class="weather-contentBlock" href="map.html?uuid=b7d12861-af3f-4cc0-847a-7d080ab03da0">
                 <img src="./img/lightbox_page/observatory.png" class="item4-icon">
                 <div>
@@ -125,7 +113,7 @@
                 </div>
               </a>
             </div>
-            <div class="col col-lg-6 col-xl-6">
+            <div class="col-6 col-sm-4">
               <a class="weather-contentBlock" href="map.html?uuid=bc54a445-7b3d-43d1-80f9-10fbf5cec4b3">
                 <img src="./img/lightbox_page/forecast.png" class="item4-icon">
                 <div>
@@ -133,7 +121,7 @@
                 </div>
               </a>
             </div>
-            <div class="col col-lg-6 col-xl-6">
+            <div class="col-6 col-sm-4">
               <a class="weather-contentBlock" href="map.html?uuid=8794829d-4d5e-4ba0-9133-ddd61719a4df">
                 <img src="./img/lightbox_page/coastal.png" class="item4-icon">
                 <div>
@@ -141,7 +129,7 @@
                 </div>
               </a>
             </div>
-            <div class="col col-lg-6 col-xl-6">
+            <div class="col-6 col-sm-4">
               <a class="weather-contentBlock" href="map.html?uuid=d48172cd-4ab4-4649-bcd1-1b0970827366">
                 <img src="./img/lightbox_page/occeanCurrent.png" class="item4-icon">
                 <div>
@@ -149,7 +137,7 @@
                 </div>
               </a>
             </div>
-            <div class="col col-lg-6 col-xl-6">
+            <div class="col-6 col-sm-4">
               <a class="weather-contentBlock" href="map.html?uuid=ad990e52-379e-4e8f-89dd-e03e464b27f5">
                 <img src="./img/lightbox_page/tidal.png" class="item4-icon">
                 <div>
@@ -157,7 +145,7 @@
                 </div>
               </a>
             </div>
-            <div class="col col-lg-6 col-xl-6">
+            <div class="col-6 col-sm-4">
               <a class="weather-contentBlock" href="map.html?uuid=1a2ede8e-59cd-464f-b964-e44d1476f5fd">
                 <img src="./img/lightbox_page/quality.png" class="item4-icon">
                 <div>
@@ -165,18 +153,18 @@
                 </div>
               </a>
             </div>
-            <div class="col col-lg-6 col-xl-6">
+            <div class="col-6 col-sm-4">
               <div class="weather-contentBlock">
                 <img src="./img/lightbox_page/wave.png" class="item4-icon">
                 <div>
                   <span class="d-block">波浪資訊</span>
                   <a href="map.html?uuid=2438f673-3a6e-4762-8529-6a2cadc84a51">浪高</a>
                   <a href="map.html?uuid=3322298e-bbe1-4a91-8d9f-7205c228bdcc">週期</a>
-                  <a href="map.html?uuid=44d021b6-d010-49cc-b9a6-2fd816e9d50b">異常趨勢</a>
+                  <a href="map.html?uuid=44d021b6-d010-49cc-b9a6-2fd816e9d50b">異常潛勢</a>
                 </div>
               </div>
             </div>
-            <div class="col col-lg-6 col-xl-6">
+            <div class="col-6 col-sm-4">
               <div class="weather-contentBlock">
                 <img src="./img/lightbox_page/surfaceTemperature.png" class="item4-icon">
                 <div>
@@ -196,7 +184,7 @@
     <div class="row">
       <a href="#" class="col-12 text-center navbar-brand Alabaster py-3 d-flex justify-content-center align-items-center">
         <img src="./img/LOGO.png" class="d-inline-block align-top logo">
-        <img src="./img/logoOCA.png" class="oca ms-3">
+        <img src="./img/logoOCA.png" class="oca ms-1 ms-sm-2 ms-md-3">
       </a>
     </div>
   </header>
@@ -230,7 +218,7 @@
         </div>
         <button class="btn2 TealBlue">氣象海情</button>
       </a>
-      <a href="map.html?catelog=law" class="col-sm-6 col-md-6 col-lg-4 col-xl-4 fill p-3">
+      <a href="map.html?cate=law" class="col-sm-6 col-md-6 col-lg-4 col-xl-4 fill p-3">
           <div class="  my-3 my-lg-2">
             <img class="section-item-icon" src="./img/leading_page/law.png">
           </div>
@@ -445,6 +433,8 @@
       </h6>
     </div>
   </footer>
-
+  <div id="stop" class="scrollTop">
+    <img src="./img/up-arrow2.svg">
+  </div>
 </body>
 </html>
