--- a/src/insidePage.html
+++ b/src/insidePage.html
@@ -12,7 +12,7 @@
 				<div class="row">
 					<a href="./index.html" class="col-12 text-center navbar-brand Alabaster py-3 d-flex justify-content-center align-items-center">
 						<img src="./img/LOGO.png" class="d-inline-block align-top logo">
-						<img src="./img/logoOCA.png" class="oca ms-3">
+						<img src="./img/logoOCA.png" class="oca ms-1 ms-sm-2 ms-md-3">
 					</a>
 				</div>
 			</section>
@@ -398,7 +398,7 @@
 								<h5 class="card-title">波浪資訊</h5>
 								<a href="map.html?uuid=2438f673-3a6e-4762-8529-6a2cadc84a51">浪高</a>
 								<a href="map.html?uuid=3322298e-bbe1-4a91-8d9f-7205c228bdcc">週期</a>
-								<a href="map.html?uuid=44d021b6-d010-49cc-b9a6-2fd816e9d50b">異常趨勢</a>
+								<a href="map.html?uuid=44d021b6-d010-49cc-b9a6-2fd816e9d50b">異常潛勢</a>
 							</div>
 						</div>
 						<div class="card m-3">
@@ -466,7 +466,7 @@
 			</div>
 		</footer>
 		<div id="stop" class="scrollTop">
-			<span><a href="">Top</a></span>
+			<img src="./img/up-arrow2.svg">
 		</div>
 	</body>
 </html>
