接資料成功

--- a/src/index4.html
+++ b/src/index4.html
@@ -394,7 +394,7 @@
     <h6 class="col-12 col-sm-8 col-lg-4">高雄市前鎮區成功二路25號4樓</h6>
     <h6 class="col-12 col-sm-4 col-lg-2">(07)338-1810</h6>
     <h6 class="col-12 col-sm-8 col-lg-4">
-      瀏覽人次:<p id="people" class="d-inline">2223</p>
+      瀏覽人次:<p id="pageViews" class="d-inline"></p>
     </h6>
   </div>
 </footer>
