--- a/src/index4.html
+++ b/src/index4.html
@@ -333,6 +333,30 @@
         </span>
       </p>
     </div>
+    <div class="row row-cols-auto mt-2">
+      <div class="col" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+        <button class="btn TealBlue outside-frame">網站宣言</button>
+      </div>
+      <div class="col" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+        <button class="btn TealBlue outside-frame">活動布告欄</button>
+      </div>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLScf7at41snW4-ZczKN3p2hR8M9VKj_Af82BWEsZg6uPfwnY3Q/viewform" class="col">
+        <button class="btn TealBlue outside-frame">意見回饋</button>
+      </a>
+      <a href="./109_12_一站式_使用說明_V1.1.pdf" class="col">
+        <button class="btn TealBlue outside-frame">使用說明(PDF)</button>
+      </a>
+      <div class="col">
+        <a href="map.html">
+          <button class="btn TealBlue outside-frame">進入圖台</button>
+        </a>
+      </div>
+      <div class="col">
+        <a href="map.html?uuid=df595e60-6287-4623-8317-4b8d6f82e2e5&panel=海情/海象資訊">
+          <button class="btn TealBlue outside-frame">海況影像</button>
+        </a>
+      </div>
+    </div>
     <div class="row mt-2 main row-cols-3 row-cols-sm-2 row-cols-md-3 row-cols-lg-5">
       <a href="" class="col p-3 d-flex justify-content-center align-items-center" data-bs-toggle="modal" data-bs-target="#exampleModal4">
         <div class="my-3 my-lg-2 TealBlue">
@@ -369,25 +393,7 @@
     </div>
   </div>
 </div>
-<div class="side">
-  <div class="container">
-    <div class="row row-cols-auto mt-2 row-cols-1 text-end">
-      <div class="col" data-bs-toggle="modal" data-bs-target="#exampleModal3">
-        <button class="btn TealBlue outside-frame">網站宣言</button>
-      </div>
-      <div class="col">
-        <a href="map.html">
-          <button class="btn TealBlue outside-frame">進入圖台</button>
-        </a>
-      </div>
-      <div class="col">
-        <a href="map.html?uuid=df595e60-6287-4623-8317-4b8d6f82e2e5&panel=海情/海象資訊">
-          <button class="btn TealBlue outside-frame">海況影像</button>
-        </a>
-      </div>
-    </div>
-  </div>
-</div>
+
 <footer class="container text-center mt-2 footer rounded-3">
   <div class="row opacity pt-3 rounded-3">
     <h6 class="col-12 col-sm-4 col-lg-2">&copy海洋委員會</h6>
