--- a/src/index4.html
+++ b/src/index4.html
@@ -9,7 +9,7 @@
 <body>
   <!-- Modal2 海況-->
   <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-scrollable">
+    <div class="modal-dialog modal-lg modal-dialog-scrollable modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLabel">氣象海情</h5>
@@ -18,25 +18,15 @@
         <div class="modal-body">
           <div class="row text-center">
             <div class="col-6 col-sm-4">
-              <a class="weather-contentBlock" href="https://www.windy.com/?23.652,121.278,8">
-                <img src="./img/lightbox_page/windy.png" class="item4-icon">
+              <a href="map.html?uuid=44d021b6-d010-49cc-b9a6-2fd816e9d50b">
+                <img src="./img/lightbox_page/wave2.svg" class="item4-icon">
                 <div>
-                  <span class="d-block">Windy</span>
-                  <p class="d-inline-block">(外部連結)</p>
+                  <span class="d-iline-block">異常潛勢(瘋狗浪)</span>
                 </div>
               </a>
             </div>
             <div class="col-6 col-sm-4">
-              <a class="weather-contentBlock" href="https://safesee.cwb.gov.tw/V2/">
-                <img src="./img/lightbox_page/cwb.png" class="item4-icon">
-                <div>
-                  <span class="d-block">台灣氣象災防平台</span>
-                  <p class="d-inline-block">(外部連結)</p>
-                </div>
-              </a>
-            </div>
-            <div class="col-6 col-sm-4">
-              <a class="weather-contentBlock" href="map.html?uuid=b7d12861-af3f-4cc0-847a-7d080ab03da0">
+              <a href="map.html?uuid=b7d12861-af3f-4cc0-847a-7d080ab03da0">
                 <img src="./img/lightbox_page/observatory.png" class="item4-icon">
                 <div>
                   <span class="d-iline-block">商港觀測站</span>
@@ -44,7 +34,7 @@
               </a>
             </div>
             <div class="col-6 col-sm-4">
-              <a class="weather-contentBlock" href="map.html?uuid=bc54a445-7b3d-43d1-80f9-10fbf5cec4b3">
+              <a href="map.html?uuid=bc54a445-7b3d-43d1-80f9-10fbf5cec4b3">
                 <img src="./img/lightbox_page/forecast.png" class="item4-icon">
                 <div>
                   <span class="d-iline-block">近海天氣預報</span>
@@ -52,7 +42,7 @@
               </a>
             </div>
             <div class="col-6 col-sm-4">
-              <a class="weather-contentBlock" href="map.html?uuid=8794829d-4d5e-4ba0-9133-ddd61719a4df">
+              <a href="map.html?uuid=8794829d-4d5e-4ba0-9133-ddd61719a4df">
                 <img src="./img/lightbox_page/coastal.png" class="item4-icon">
                 <div>
                   <span class="d-iline-block">沿海鄉鎮天氣預報</span>
@@ -60,7 +50,7 @@
               </a>
             </div>
             <div class="col-6 col-sm-4">
-              <a class="weather-contentBlock" href="map.html?uuid=d48172cd-4ab4-4649-bcd1-1b0970827366">
+              <a href="map.html?uuid=d48172cd-4ab4-4649-bcd1-1b0970827366">
                 <img src="./img/lightbox_page/occeanCurrent.png" class="item4-icon">
                 <div>
                   <span class="d-iline-block">表面海流</span>
@@ -68,7 +58,7 @@
               </a>
             </div>
             <div class="col-6 col-sm-4">
-              <a class="weather-contentBlock" href="map.html?uuid=ad990e52-379e-4e8f-89dd-e03e464b27f5">
+              <a href="map.html?uuid=ad990e52-379e-4e8f-89dd-e03e464b27f5">
                 <img src="./img/lightbox_page/tidal.png" class="item4-icon">
                 <div>
                   <span class="d-iline-block">潮汐資訊</span>
@@ -76,7 +66,7 @@
               </a>
             </div>
             <div class="col-6 col-sm-4">
-              <a class="weather-contentBlock" href="map.html?uuid=1a2ede8e-59cd-464f-b964-e44d1476f5fd">
+              <a href="map.html?uuid=1a2ede8e-59cd-464f-b964-e44d1476f5fd">
                 <img src="./img/lightbox_page/quality.png" class="item4-icon">
                 <div>
                   <span class="d-iline-block">海域水質</span>
@@ -90,7 +80,6 @@
                   <span class="d-block">波浪資訊</span>
                   <a href="map.html?uuid=2438f673-3a6e-4762-8529-6a2cadc84a51">浪高</a>
                   <a href="map.html?uuid=3322298e-bbe1-4a91-8d9f-7205c228bdcc">週期</a>
-                  <a href="map.html?uuid=44d021b6-d010-49cc-b9a6-2fd816e9d50b">異常潛勢</a>
                 </div>
               </div>
             </div>
@@ -105,6 +94,24 @@
                 </div>
               </div>
             </div>
+            <div class="col-6 col-sm-4">
+              <a href="https://www.windy.com/?23.652,121.278,8">
+                <img src="./img/lightbox_page/windy.png" class="item4-icon">
+                <div>
+                  <span class="d-block">Windy</span>
+                  <p class="d-inline-block">(外部連結)</p>
+                </div>
+              </a>
+            </div>
+            <div class="col-6 col-sm-4">
+              <a href="https://safesee.cwb.gov.tw/V2/">
+                <img src="./img/lightbox_page/cwb.png" class="item4-icon">
+                <div>
+                  <span class="d-block">台灣氣象災防平台</span>
+                  <p class="d-inline-block">(外部連結)</p>
+                </div>
+              </a>
+            </div>
           </div>
         </div>
       </div>
@@ -112,7 +119,7 @@
   </div>
   <!-- Modal3 網站宣言-->
   <div class="modal fade" id="exampleModal3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-scrollable">
+    <div class="modal-dialog modal-lg modal-dialog-scrollable modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLabel">網站宣言</h5>
@@ -134,7 +141,7 @@
   </div>
   <!-- Modal4 相關連結-->
   <div class="modal fade" id="exampleModal4" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-scrollable">
+    <div class="modal-dialog modal-lg modal-dialog-scrollable modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLabel">相關連結</h5>
@@ -316,10 +323,25 @@
       </div>
     </div>
   </div>
+  <!-- Modal5 活動布告欄-->
+  <div class="modal fade" id="exampleModal5" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-scrollable modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">活動布告欄</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p><a href="https://www.sow.org.tw/faq/myiccday" class="tooltip-test" title="Tooltip">天天都是你的國際淨灘行動 請一起這樣愛海洋</a></p>
+          <p><a href="https://www.cga.gov.tw/GipOpen/wSite/ct?xItem=141399&ctNode=650&mp=999" class="tooltip-test" title="Tooltip">海巡偕同師生淨灘，攜手恢復海灘樣貌</a></p>
+        </div>
+      </div>
+    </div>
+  </div>
 <div class="wrapper">
   <header class="container">
     <div class="row">
-      <a href="#" class="col-12 text-center navbar-brand Alabaster py-3 d-flex justify-content-center align-items-center">
+      <a href="#" class="col-12 text-center navbar-brand Alabaster py-lg-3 d-flex justify-content-center align-items-center">
         <img src="./img/LOGO.png" class="d-inline-block align-top logo">
         <img src="./img/logoOCA.png" class="oca ms-3">
       </a>
@@ -328,32 +350,62 @@
   <div class="container">
     <div class="row">
       <p class="marquee">
-        <span class="py-1 px-2 rounded-pill">
+        <span class="py-1 px-2 rounded-pill mb-2">
           海上颱風警報:預測颱風的七級風暴風範圍可能侵襲台灣或金門、馬袓陸上時之前18小時，即發布「海上陸上颱風警報」。之後每隔1小時發布一次，必要時得加發之。
         </span>
       </p>
     </div>
-    <div class="row row-cols-auto mt-2">
-      <div class="col" data-bs-toggle="modal" data-bs-target="#exampleModal3">
-        <button class="btn TealBlue outside-frame">網站宣言</button>
+    <div class="row row-cols-auto justify-content-center">
+      <div class="col">
+        <div class="dropdown">
+          <div class="btn-group">
+            <button class="btn2 btn-lg dropdown-toggle SeaSerpent mb-2" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="buttontext">
+            </button>
+            <ul class="dropdown-menu">
+              <li>
+                <a class="dropdown-item active tab" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">網站宣言</a>
+              </li>
+              <li>
+                <a class="dropdown-item tab" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal5">活動布告欄</a>
+              </li>
+              <li>
+                <a class="dropdown-item tab" href="https://docs.google.com/forms/d/e/1FAIpQLScf7at41snW4-ZczKN3p2hR8M9VKj_Af82BWEsZg6uPfwnY3Q/viewform">意見回饋</a>
+              </li>
+              <li>
+                <a class="dropdown-item tab" href="./res/109_12_一站式_使用說明_V1.1.pdf">使用說明(PDF)</a>
+              </li>
+              <li>
+                <a class="dropdown-item tab" href="map.html">進入完整圖台</a>
+              </li>
+              <li>
+                <a class="dropdown-item tab" href="map.html?uuid=df595e60-6287-4623-8317-4b8d6f82e2e5&panel=海情/海象資訊">海況影像</a>
+              </li>
+            </ul>
+          </div>
+        </div>					
       </div>
+    </div>
+    <div class="row row-cols-auto mt-2 nav-bg">
       <div class="col" data-bs-toggle="modal" data-bs-target="#exampleModal3">
-        <button class="btn TealBlue outside-frame">活動布告欄</button>
+        <button class="btn TealBlue scoll">網站宣言</button>
+      </div>
+      <div class="col" data-bs-toggle="modal" data-bs-target="#exampleModal5">
+        <button class="btn TealBlue scoll">活動布告欄</button>
       </div>
       <a href="https://docs.google.com/forms/d/e/1FAIpQLScf7at41snW4-ZczKN3p2hR8M9VKj_Af82BWEsZg6uPfwnY3Q/viewform" class="col">
-        <button class="btn TealBlue outside-frame">意見回饋</button>
+        <button class="btn TealBlue scoll">意見回饋</button>
       </a>
-      <a href="./109_12_一站式_使用說明_V1.1.pdf" class="col">
-        <button class="btn TealBlue outside-frame">使用說明(PDF)</button>
+      <a href="./res/109_12_一站式_使用說明_V1.1.pdf" class="col">
+        <button class="btn TealBlue scoll">使用說明(PDF)</button>
       </a>
       <div class="col">
         <a href="map.html">
-          <button class="btn TealBlue outside-frame">進入圖台</button>
+          <button class="btn TealBlue scoll">進入完整圖台</button>
         </a>
       </div>
       <div class="col">
         <a href="map.html?uuid=df595e60-6287-4623-8317-4b8d6f82e2e5&panel=海情/海象資訊">
-          <button class="btn TealBlue outside-frame">海況影像</button>
+          <button class="btn TealBlue scoll">海況影像</button>
         </a>
       </div>
     </div>
@@ -362,31 +414,31 @@
         <div class="my-3 my-lg-2 TealBlue">
           <img class="section-item-icon" src="./img/leading_page/newspaper.svg">
         </div>
-        <button class="btn TealBlue">活動申請</button>
+        <button class="btn Lotion">活動申請</button>
       </a>
       <a href="https://rocean.oac.gov.tw/oacmap/map?loc=22.33793330994558,120.30200958251955,12" class="col p-3 d-flex justify-content-center align-items-center">
         <div class="my-3 my-lg-2 TealBlue">
           <img class="section-item-icon" src="./img/leading_page/location.svg">
         </div>
-        <button class="btn TealBlue">法令資訊</button>
+        <button class="btn Lotion">法令資訊</button>
       </a>
-      <a href="" class="col p-3 d-flex justify-content-center align-items-center">
+      <a href="https://demo.chuanhwa.com.tw/oac/layout-demo/" class="col p-3 d-flex justify-content-center align-items-center">
         <div class="my-3 my-lg-2 TealBlue">
           <img class="section-item-icon" src="./img/leading_page/recreation.png">
         </div>
-        <button class="btn TealBlue">遊憩查詢</button>
+        <button class="btn Lotion">遊憩查詢</button>
       </a>
       <a href="" class="col p-3 d-flex justify-content-center align-items-center" data-bs-toggle="modal" data-bs-target="#exampleModal2">
         <div class="my-3 my-lg-2 TealBlue">
           <img class="section-item-icon" src="./img/leading_page/waves.svg">
         </div>
-        <button class="btn TealBlue">氣象海情</button>
+        <button class="btn Lotion">氣象海情</button>
       </a>
       <a href="map.html?cate=force&uuid=df595e60-6287-4623-8317-4b8d6f82e2e5&panel=礙航/射擊通報" class="col p-3 d-flex justify-content-center align-items-center gopage">
         <div class="my-3 my-lg-2 TealBlue">
           <img class="section-item-icon" src="./img/leading_page/warning.svg">
         </div>
-        <button class="btn TealBlue">
+        <button class="btn Lotion">
           射擊通報
         </button>
       </a>
