--- a/src/index4.html
+++ b/src/index4.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>海域遊憩平台一站式網站</title>
 </head>
 <body>
   <!-- Modal2 海況-->
@@ -95,7 +95,7 @@
               </div>
             </div>
             <div class="col-6 col-sm-4">
-              <a href="https://www.windy.com/?23.652,121.278,8">
+              <a href="https://www.windy.com/?23.652,121.278,8" target="_blank">
                 <img src="./img/lightbox_page/windy.png" class="item4-icon">
                 <div>
                   <span class="d-block">Windy</span>
@@ -104,7 +104,7 @@
               </a>
             </div>
             <div class="col-6 col-sm-4">
-              <a href="https://safesee.cwb.gov.tw/V2/">
+              <a href="https://safesee.cwb.gov.tw/V2/" target="_blank">
                 <img src="./img/lightbox_page/cwb.png" class="item4-icon">
                 <div>
                   <span class="d-block">台灣氣象災防平台</span>
@@ -161,10 +161,10 @@
                   <div class="card-text d-none d-sm-block">
                     基隆市政府2020年推出【島礁磯釣證線上申請系統】，讓民眾更方便快速完成辦證，帶動島礁磯釣國際賽事與週邊相關產業發展。
                   </div>
-                  <a href="http://klfish.naffic.org.tw/webpad/webpad.aspx?EpfJdId9UuDR1K%2BD%2BQ4%2F70pgeh4ocITQ" class="card-link primary">
+                  <a href="http://klfish.naffic.org.tw/webpad/webpad.aspx?EpfJdId9UuDR1K%2BD%2BQ4%2F70pgeh4ocITQ" class="card-link primary" target="_blank">
                     基隆區漁會官方網站
                   </a>
-                  <a href="https://www.icellars.tw/keelungreeffishing/auth/login.html" class="card-link" style="display: table-cell">基隆市島礁磯釣活動申請入口
+                  <a href="https://www.icellars.tw/keelungreeffishing/auth/login.html" class="card-link" target="_blank" style="display: table-cell">基隆市島礁磯釣活動申請入口
                   </a>
                 </div>
               </div>
@@ -176,10 +176,10 @@
                   <div class="card-text d-none d-sm-block">
                     交通部航港局於2019年推出【遊艇申辦服務平台】。服務平台使用非常容易，只要登錄帳號、填寫進出港申請、申請泊位，即可等著收取email確認。
                   </div>
-                  <a href="https://web02.mtnet.gov.tw/" class="card-link">
+                  <a href="https://web02.mtnet.gov.tw/" class="card-link" target="_blank">
                     海港單一窗口服務平台
                   </a>								
-                  <a href="https://ftz.mtnet.gov.tw/YBerth/Portal/Logout" class="card-link" style="display: table-cell">
+                  <a href="https://ftz.mtnet.gov.tw/YBerth/Portal/Logout" class="card-link" target="_blank" style="display: table-cell">
                     泊位資訊查詢
                   </a>
                 </div>
@@ -192,10 +192,10 @@
                   <div class="card-text d-none d-sm-block">
                     龜山島各項申請查詢作業、船舶資訊、法規資訊、登島表單之線上申請系統。
                   </div>								
-                  <a href="https://events.necoast-nsa.gov.tw/coast/index.aspx" class="card-link">
+                  <a href="https://events.necoast-nsa.gov.tw/coast/index.aspx" class="card-link" target="_blank">
                     東北角龜山島登島官方網站
                   </a>
-                  <a href="https://events.necoast-nsa.gov.tw/Coast/Application.aspx?a=2659" class="card-link" style="display: table-cell">
+                  <a href="https://events.necoast-nsa.gov.tw/Coast/Application.aspx?a=2659" class="card-link" target="_blank" style="display: table-cell">
                     登島線上申請
                   </a>
                 </div>
@@ -208,10 +208,10 @@
                   <div class="card-text d-none d-sm-block">
                     特別景觀區之「特一-北汕尾濕地特別景觀區」、「特五-曾文溪口特別景觀區」部分公共河道水域，一般管制區之「管一-鹽水溪水域一般管制區」部分水域、「管八-七股潟湖一般管制區」水域應向台江國家公園申請核准後始得從事水域遊憩活動。
                   </div>
-                  <a href="https://www.tjnp.gov.tw/" class="card-link">
+                  <a href="https://www.tjnp.gov.tw/" class="card-link" target="_blank">
                     台江國家公園官方網站
                   </a>								
-                  <a href="https://www.tjnp.gov.tw/PublicInformationDetail.aspx?Cond=83713bde-e4e4-4f5c-a8ad-ed4cc0d60c34" class="card-link" style="display: table-cell">
+                  <a href="https://www.tjnp.gov.tw/PublicInformationDetail.aspx?Cond=83713bde-e4e4-4f5c-a8ad-ed4cc0d60c34" class="card-link" target="_blank" style="display: table-cell">
                     活動申請須知
                   </a>
                 </div>
@@ -232,7 +232,7 @@
                   <div class="card-text d-none d-sm-block">
                     此為漁業署之娛樂漁業管理辦法條文連結，提供法條參考與相關文件。
                   </div>								
-                  <a href="https://www.fa.gov.tw/cht/LawsCentralFisheries/content.aspx?id=17&chk=76cc8fe4-de25-4a4f-8a46-bdfd838601cc&param" class="card-link">
+                  <a href="https://www.fa.gov.tw/cht/LawsCentralFisheries/content.aspx?id=17&chk=76cc8fe4-de25-4a4f-8a46-bdfd838601cc&param" class="card-link" target="_blank">
                     漁業署相關文件連結
                   </a>
                 </div>
@@ -245,10 +245,10 @@
                   <div class="card-text d-none d-sm-block">
                     林務局提供漂流木公文，須注意撿拾對象、區域、時間。撿拾後須到站登記才能搬運離開。
                   </div>								
-                  <a href="https://www.forest.gov.tw/" class="card-link">
+                  <a href="https://www.forest.gov.tw/" class="card-link" target="_blank">
                     林務局官方網站
                   </a>
-                  <a href="https://www.forest.gov.tw/Driftwood" class="card-link" style="display: table-cell">
+                  <a href="https://www.forest.gov.tw/Driftwood" class="card-link" target="_blank" style="display: table-cell" >
                     撿拾漂流木開放時間查詢
                   </a>
                 </div>
@@ -261,10 +261,10 @@
                   <div class="card-text d-none d-sm-block">
                     臺灣鯨豚資源豐富，全球80多種鯨豚中，有近30種曾出現於我國周遭海域，每年4月到10月間是臺灣的賞鯨季節，海保署透過「臺灣海域賞鯨指南」發布，以淺顯易懂的圖像文字，說明友善賞鯨重點原則，希望大家都能當個負責任的遊客，在開心賞鯨時，也瞭解如何減少賞鯨活動對於鯨豚族群造成衝擊，讓珍貴的鯨豚資源與賞鯨產業皆能永續發展。
                   </div>								
-                  <a href="https://www.oca.gov.tw/ch/index.jsp" class="card-link">
+                  <a href="https://www.oca.gov.tw/ch/index.jsp" class="card-link" target="_blank">
                     海洋保育署官方網站
                   </a>
-                  <a href="https://ftz.mtnet.gov.tw/YBerth/Portal/Logout" class="card-link" style="display: table-cell">
+                  <a href="https://ftz.mtnet.gov.tw/YBerth/Portal/Logout" class="card-link" target="_blank" style="display: table-cell">
                     賞鯨指南(PDF)
                   </a>
                 </div>
@@ -277,10 +277,10 @@
                   <div class="card-text d-none d-sm-block">
                     藍色公路目前主要有兩條航線。一是基隆河，由大佳河濱公園碼頭出發至美堤碼頭、錫口碼頭，於內湖科技園區附近的河域再往返，主要以遊河為主，夜晚河畔建築物燈光以及橋上的光雕點綴，更能展現臺北都市之美；另外一條是淡水河，而在淡水河有五個乘船處，分別是大稻埕碼頭、關渡碼頭、淡水客船碼頭、淡水漁人碼頭、八里客船碼頭。
                   </div>								
-                  <a href="https://www.riverfun.net/" class="card-link">
+                  <a href="https://www.riverfun.net/" class="card-link" target="_blank">
                     藍色水路旅遊官方網站
                   </a>
-                  <a href="https://www.cwb.gov.tw/V8/C/M/bluehighway_home.html" class="card-link" style="display: table-cell">
+                  <a href="https://www.cwb.gov.tw/V8/C/M/bluehighway_home.html" class="card-link" target="_blank" style="display: table-cell">
                     藍色公路浪高說明
                   </a>
                 </div>
@@ -293,10 +293,10 @@
                   <div class="card-text d-none d-sm-block">
                     此為全國法規資料庫之【遊艇管理規則】法規，提供有需要之民眾查閱。
                   </div>								
-                  <a href="https://law.moj.gov.tw/Index.aspx" class="card-link">
+                  <a href="https://law.moj.gov.tw/Index.aspx" class="card-link" target="_blank">
                     全國法規資料庫官方網站
                   </a>
-                  <a href="https://law.moj.gov.tw/LawClass/LawAll.aspx?pcode=K0070069" class="card-link" style="display: table-cell">
+                  <a href="https://law.moj.gov.tw/LawClass/LawAll.aspx?pcode=K0070069" class="card-link" target="_blank" style="display: table-cell">
                     遊艇管理規則法規
                   </a>
                 </div>
@@ -309,10 +309,10 @@
                   <div class="card-text d-none d-sm-block">
                     產險業者推出「海域活動綜合保險」商品，保障內容除了一般傷害保險與旅行平安險保障外，還增加民眾參與海域休憩活動可能面臨的傷害保障。
                   </div>								
-                  <a href="http://www.nlia.org.tw/" class="card-link">
+                  <a href="http://www.nlia.org.tw/" class="card-link" target="_blank">
                     中華民國產物保險商業同業公會
                   </a>
-                  <a href="http://www.nlia.org.tw/modules/tadnews/page.php?ncsn=130&nsn=912#A" class="card-link" style="display: table-cell">
+                  <a href="http://www.nlia.org.tw/modules/tadnews/page.php?ncsn=130&nsn=912#A" class="card-link" target="_blank" style="display: table-cell">
                     海域活動保險專區
                   </a>
                 </div>
@@ -332,8 +332,8 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <p><a href="https://www.sow.org.tw/faq/myiccday" class="tooltip-test" title="Tooltip">天天都是你的國際淨灘行動 請一起這樣愛海洋</a></p>
-          <p><a href="https://www.cga.gov.tw/GipOpen/wSite/ct?xItem=141399&ctNode=650&mp=999" class="tooltip-test" title="Tooltip">海巡偕同師生淨灘，攜手恢復海灘樣貌</a></p>
+          <p><a href="https://www.sow.org.tw/faq/myiccday" class="tooltip-test" title="Tooltip" target="_blank">天天都是你的國際淨灘行動 請一起這樣愛海洋</a></p>
+          <p><a href="https://www.cga.gov.tw/GipOpen/wSite/ct?xItem=141399&ctNode=650&mp=999" class="tooltip-test" title="Tooltip" target="_blank">海巡偕同師生淨灘，攜手恢復海灘樣貌</a></p>
         </div>
       </div>
     </div>
@@ -369,10 +369,10 @@
                 <a class="dropdown-item tab" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal5">活動布告欄</a>
               </li>
               <li>
-                <a class="dropdown-item tab" href="https://docs.google.com/forms/d/e/1FAIpQLScf7at41snW4-ZczKN3p2hR8M9VKj_Af82BWEsZg6uPfwnY3Q/viewform">意見回饋</a>
+                <a class="dropdown-item tab" href="https://docs.google.com/forms/d/e/1FAIpQLScf7at41snW4-ZczKN3p2hR8M9VKj_Af82BWEsZg6uPfwnY3Q/viewform" target="_blank">意見回饋</a>
               </li>
               <li>
-                <a class="dropdown-item tab" href="./res/109_12_一站式_使用說明_V1.1.pdf">使用說明(PDF)</a>
+                <a class="dropdown-item tab" href="./res/109_12_一站式_使用說明_V1.1.pdf" target="_blank">使用說明(PDF)</a>
               </li>
               <li>
                 <a class="dropdown-item tab" href="map.html">進入完整圖台</a>
@@ -392,10 +392,10 @@
       <div class="col" data-bs-toggle="modal" data-bs-target="#exampleModal5">
         <button class="btn TealBlue scoll">活動布告欄</button>
       </div>
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLScf7at41snW4-ZczKN3p2hR8M9VKj_Af82BWEsZg6uPfwnY3Q/viewform" class="col">
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLScf7at41snW4-ZczKN3p2hR8M9VKj_Af82BWEsZg6uPfwnY3Q/viewform" class="col" target="_blank">
         <button class="btn TealBlue scoll">意見回饋</button>
       </a>
-      <a href="./res/109_12_一站式_使用說明_V1.1.pdf" class="col">
+      <a href="./res/109_12_一站式_使用說明_V1.1.pdf" class="col" target="_blank">
         <button class="btn TealBlue scoll">使用說明(PDF)</button>
       </a>
       <div class="col">
@@ -416,13 +416,13 @@
         </div>
         <button class="btn Lotion">活動申請</button>
       </a>
-      <a href="https://rocean.oac.gov.tw/oacmap/map?loc=22.33793330994558,120.30200958251955,12" class="col p-3 d-flex justify-content-center align-items-center">
+      <a href="https://rocean.oac.gov.tw/oacmap/map?loc=22.33793330994558,120.30200958251955,12" class="col p-3 d-flex justify-content-center align-items-center" target="_blank">
         <div class="my-3 my-lg-2 TealBlue">
           <img class="section-item-icon" src="./img/leading_page/location.svg">
         </div>
         <button class="btn Lotion">法令資訊</button>
       </a>
-      <a href="https://demo.chuanhwa.com.tw/oac/layout-demo/" class="col p-3 d-flex justify-content-center align-items-center">
+      <a href="https://demo.chuanhwa.com.tw/oac/layout-demo/" class="col p-3 d-flex justify-content-center align-items-center" target="_blank">
         <div class="my-3 my-lg-2 TealBlue">
           <img class="section-item-icon" src="./img/leading_page/recreation.png">
         </div>
@@ -434,7 +434,7 @@
         </div>
         <button class="btn Lotion">氣象海情</button>
       </a>
-      <a href="map.html?cate=force&uuid=df595e60-6287-4623-8317-4b8d6f82e2e5&panel=礙航/射擊通報" class="col p-3 d-flex justify-content-center align-items-center gopage">
+      <a href="https://demo.chuanhwa.com.tw/oac/layout-demo/" class="col p-3 d-flex justify-content-center align-items-center" target="_blank">
         <div class="my-3 my-lg-2 TealBlue">
           <img class="section-item-icon" src="./img/leading_page/warning.svg">
         </div>
