--- a/src/index4.html
+++ b/src/index4.html
@@ -426,7 +426,7 @@
       </div>
     </div>
   </header>
-  <div class="wrapper wrapper-baseline">
+  <div class="wrapper">
     <div class="container">
       <div class="row main row-cols-3 row-cols-sm-2 row-cols-md-3 row-cols-lg-5">
         <a href="" class="col p-3 d-flex justify-content-center align-items-center" data-bs-toggle="modal" data-bs-target="#exampleModal4">
