--- a/src/index4.html
+++ b/src/index4.html
@@ -357,11 +357,11 @@
           <img src="./img/logoOCA.png" class="oca ms-3">
         </a>
       </div>
-      <div class="row row-cols-auto justify-content-center">
+      <div class="row row-cols-auto justify-content-center mb-2">
         <div class="col">
           <div class="dropdown">
             <div class="btn-group">
-              <button class="btn2 btn-lg dropdown-toggle OrchidPurple" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="buttontext">
+              <button class="btn2 btn-lg dropdown-toggle TealBlue" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="buttontext">
               </button>
               <ul class="dropdown-menu">
                 <li>
@@ -426,7 +426,7 @@
       </div>
     </div>
   </header>
-  <div class="wrapper">
+  <div class="wrapper wrapper-middle">
     <div class="container">
       <div class="row main row-cols-3 row-cols-sm-2 row-cols-md-3 row-cols-lg-5">
         <a href="" class="col p-3 d-flex justify-content-center align-items-center" data-bs-toggle="modal" data-bs-target="#exampleModal4">
