--- a/src/index.html
+++ b/src/index.html
@@ -374,7 +374,7 @@
                   <a class="dropdown-item tab" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal6">相關連結</a>
                 </li>
                 <li>
-                  <a class="dropdown-item tab" href="https://docs.google.com/forms/d/e/1FAIpQLScf7at41snW4-ZczKN3p2hR8M9VKj_Af82BWEsZg6uPfwnY3Q/viewform" target="_blank">意見回饋</a>
+                  <a class="dropdown-item tab" href="https://docs.google.com/forms/d/e/1FAIpQLScf7at41snW4-ZczKN3p2hR8M9VKj_Af82BWEsZg6uPfwnY3Q/viewform" target="_blank">意見回饋<lr></a>
                 </li>
                 <li>
                   <a class="dropdown-item tab" href="./res/109_12_一站式_使用說明_V1.1.pdf" target="_blank">使用說明(PDF)</a>
@@ -417,12 +417,7 @@
           </a>
         </div>
       </div>
-      <div class="row">
-        <p class="marquee">
-          <span class="py-1 px-2 rounded-pill">
-            海上颱風警報:預測颱風的七級風暴風範圍可能侵襲台灣或金門、馬袓陸上時之前18小時，即發布「海上陸上颱風警報」。之後每隔1小時發布一次，必要時得加發之。
-          </span>
-        </p>
+      <div class="row marquee" id="marquee">
       </div>
     </div>
   </header>
