--- a/src/index.html
+++ b/src/index.html
@@ -417,7 +417,7 @@
           </a>
         </div>
       </div>
-      <div class="row marquee" id="marquee">
+      <div class="row marquee" id="marquee" direction="dun">
       </div>
     </div>
   </header>
