調整為跑馬燈

--- a/src/index.html
+++ b/src/index.html
@@ -417,7 +417,9 @@
           </a>
         </div>
       </div>
-      <div class="row marquee" id="marquee" direction="dun">
+      <div class="row">
+        <p class="marquee" id="marquee">
+        </p>
       </div>
     </div>
   </header>
