--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         <div class="modal-body">
           <div class="row text-center">
             <div class="col-6 col-sm-4">
-              <a href="map.html?uuid=44d021b6-d010-49cc-b9a6-2fd816e9d50b">
+              <a href="map.html?panel=weather&uuid=44d021b6-d010-49cc-b9a6-2fd816e9d50b">
                 <img src="./img/lightbox_page/wave2.svg" class="item4-icon">
                 <div>
                   <span class="d-iline-block">異常潛勢(瘋狗浪)</span>
@@ -26,7 +26,7 @@
               </a>
             </div>
             <div class="col-6 col-sm-4">
-              <a href="map.html?uuid=b7d12861-af3f-4cc0-847a-7d080ab03da0">
+              <a href="map.html?panel=weather&uuid=b7d12861-af3f-4cc0-847a-7d080ab03da0">
                 <img src="./img/lightbox_page/observatory.png" class="item4-icon">
                 <div>
                   <span class="d-iline-block">商港觀測站</span>
@@ -34,7 +34,7 @@
               </a>
             </div>
             <div class="col-6 col-sm-4">
-              <a href="map.html?uuid=bc54a445-7b3d-43d1-80f9-10fbf5cec4b3">
+              <a href="map.html?panel=weather&uuid=bc54a445-7b3d-43d1-80f9-10fbf5cec4b3">
                 <img src="./img/lightbox_page/forecast.png" class="item4-icon">
                 <div>
                   <span class="d-iline-block">近海天氣預報</span>
@@ -42,7 +42,7 @@
               </a>
             </div>
             <div class="col-6 col-sm-4">
-              <a href="map.html?uuid=8794829d-4d5e-4ba0-9133-ddd61719a4df">
+              <a href="map.html?panel=weather&uuid=8794829d-4d5e-4ba0-9133-ddd61719a4df">
                 <img src="./img/lightbox_page/coastal.png" class="item4-icon">
                 <div>
                   <span class="d-iline-block">沿海鄉鎮天氣預報</span>
@@ -50,7 +50,7 @@
               </a>
             </div>
             <div class="col-6 col-sm-4">
-              <a href="map.html?uuid=d48172cd-4ab4-4649-bcd1-1b0970827366">
+              <a href="map.html?panel=weather&uuid=d48172cd-4ab4-4649-bcd1-1b0970827366">
                 <img src="./img/lightbox_page/occeanCurrent.png" class="item4-icon">
                 <div>
                   <span class="d-iline-block">表面海流</span>
@@ -58,7 +58,7 @@
               </a>
             </div>
             <div class="col-6 col-sm-4">
-              <a href="map.html?uuid=ad990e52-379e-4e8f-89dd-e03e464b27f5">
+              <a href="map.html?panel=weather&uuid=ad990e52-379e-4e8f-89dd-e03e464b27f5">
                 <img src="./img/lightbox_page/tidal.png" class="item4-icon">
                 <div>
                   <span class="d-iline-block">潮汐資訊</span>
@@ -66,7 +66,7 @@
               </a>
             </div>
             <div class="col-6 col-sm-4">
-              <a href="map.html?uuid=1a2ede8e-59cd-464f-b964-e44d1476f5fd">
+              <a href="map.html?panel=weather&uuid=1a2ede8e-59cd-464f-b964-e44d1476f5fd">
                 <img src="./img/lightbox_page/quality.png" class="item4-icon">
                 <div>
                   <span class="d-iline-block">海域水質</span>
@@ -78,8 +78,8 @@
                 <img src="./img/lightbox_page/wave.png" class="item4-icon">
                 <div>
                   <span class="d-block">波浪資訊</span>
-                  <a href="map.html?uuid=2438f673-3a6e-4762-8529-6a2cadc84a51">浪高</a>
-                  <a href="map.html?uuid=3322298e-bbe1-4a91-8d9f-7205c228bdcc">週期</a>
+                  <a href="map.html?panel=weather&uuid=2438f673-3a6e-4762-8529-6a2cadc84a51">浪高</a>
+                  <a href="map.html?panel=weather&uuid=3322298e-bbe1-4a91-8d9f-7205c228bdcc">週期</a>
                 </div>
               </div>
             </div>
@@ -88,9 +88,9 @@
                 <img src="./img/lightbox_page/surfaceTemperature.png" class="item4-icon">
                 <div>
                   <span class="d-block">波浪資訊</span>
-                  <a href="map.html?uuid=9f3c63b0-7fe7-493a-9995-0e70dc4ae5b9">溫度</a>
-                  <a href="map.html?uuid=5a1cb7a2-2c28-4860-a4c8-80c057929ea1">高度</a>
-                  <a href="map.html?uuid=4b5fb55a-3d4e-412c-a23b-c0d3b950e886">鹽度</a>
+                  <a href="map.html?panel=weather&uuid=9f3c63b0-7fe7-493a-9995-0e70dc4ae5b9">溫度</a>
+                  <a href="map.html?panel=weather&uuid=5a1cb7a2-2c28-4860-a4c8-80c057929ea1">高度</a>
+                  <a href="map.html?panel=weather&uuid=4b5fb55a-3d4e-412c-a23b-c0d3b950e886">鹽度</a>
                 </div>
               </div>
             </div>
@@ -432,17 +432,17 @@
           </div>
           <button class="btn Lotion">活動申請</button>
         </a>
-        <a href="https://rocean.oac.gov.tw/" class="col p-3 d-flex justify-content-center align-items-center" target="_blank">
+        <a href="map.html?loc=23.43048899388297,120.98968505859376,8&cate=law" class="col p-3 d-flex justify-content-center align-items-center" target="_blank">
           <div class="my-3 my-lg-2 OrchidPurple">
             <img class="section-item-icon" src="./img/leading_page/location.svg">
           </div>
           <button class="btn Lotion">法令資訊</button>
         </a>
-        <a href="map.html" class="col p-3 d-flex justify-content-center align-items-center">
+        <a href="map.html?panel=relaxation" class="col p-3 d-flex justify-content-center align-items-center">
           <div class="my-3 my-lg-2 OrchidPurple">
             <img class="section-item-icon" src="./img/leading_page/kayak.svg">
           </div>
-          <button class="btn Lotion">遊憩查詢</button>
+          <button class="btn Lotion">海域遊憩</button>
         </a>
         <a href="" class="col p-3 d-flex justify-content-center align-items-center" data-bs-toggle="modal" data-bs-target="#exampleModal2">
           <div class="my-3 my-lg-2 OrchidPurple">
@@ -450,12 +450,12 @@
           </div>
           <button class="btn Lotion">海情海象</button>
         </a>
-        <a href="map.html" class="col p-3 d-flex justify-content-center align-items-center">
+        <a href="map.html?panel=obstruct" class="col p-3 d-flex justify-content-center align-items-center">
           <div class="my-3 my-lg-2 OrchidPurple">
             <img class="section-item-icon" src="./img/leading_page/warning.svg">
           </div>
           <button class="btn Lotion">
-            射擊通報
+            射擊礙航
           </button>
         </a>
       </div>
