--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
               </a>
             </div>
             <div class="col-6 col-sm-4">
-              <a href="map.html?panel=weather&uuid=b7d12861-af3f-4cc0-847a-7d080ab03da0">
+              <a href="map.html?uuid=b7d12861-af3f-4cc0-847a-7d080ab03da0">
                 <img src="./img/lightbox_page/observatory.png" class="item4-icon">
                 <div>
                   <span class="d-iline-block">商港觀測站</span>
@@ -34,7 +34,7 @@
               </a>
             </div>
             <div class="col-6 col-sm-4">
-              <a href="map.html?panel=weather&uuid=bc54a445-7b3d-43d1-80f9-10fbf5cec4b3">
+              <a href="map.html?uuid=bc54a445-7b3d-43d1-80f9-10fbf5cec4b3">
                 <img src="./img/lightbox_page/forecast.png" class="item4-icon">
                 <div>
                   <span class="d-iline-block">近海天氣預報</span>
@@ -42,7 +42,7 @@
               </a>
             </div>
             <div class="col-6 col-sm-4">
-              <a href="map.html?panel=weather&uuid=8794829d-4d5e-4ba0-9133-ddd61719a4df">
+              <a href="map.html?uuid=8794829d-4d5e-4ba0-9133-ddd61719a4df">
                 <img src="./img/lightbox_page/coastal.png" class="item4-icon">
                 <div>
                   <span class="d-iline-block">沿海鄉鎮天氣預報</span>
@@ -58,7 +58,7 @@
               </a>
             </div>
             <div class="col-6 col-sm-4">
-              <a href="map.html?panel=weather&uuid=ad990e52-379e-4e8f-89dd-e03e464b27f5">
+              <a href="map.html?uuid=ad990e52-379e-4e8f-89dd-e03e464b27f5">
                 <img src="./img/lightbox_page/tidal.png" class="item4-icon">
                 <div>
                   <span class="d-iline-block">潮汐資訊</span>
@@ -66,7 +66,7 @@
               </a>
             </div>
             <div class="col-6 col-sm-4">
-              <a href="map.html?panel=weather&uuid=1a2ede8e-59cd-464f-b964-e44d1476f5fd">
+              <a href="map.html?uuid=1a2ede8e-59cd-464f-b964-e44d1476f5fd">
                 <img src="./img/lightbox_page/quality.png" class="item4-icon">
                 <div>
                   <span class="d-iline-block">海域水質</span>
