--- a/src/index.html
+++ b/src/index.html
@@ -383,7 +383,7 @@
                   <a class="dropdown-item tab" href="map.html">進入完整圖台</a>
                 </li>
                 <li>
-                  <a class="dropdown-item tab" href="map.html?uuid=df595e60-6287-4623-8317-4b8d6f82e2e5&panel=海情/海象資訊">海況影像</a>
+                  <a class="dropdown-item tab" href="map.html?panel=weather&uuid=df595e60-6287-4623-8317-4b8d6f82e2e5&panel=海情/海象資訊">海況影像</a>
                 </li>
               </ul>
             </div>
