--- a/src/index.html
+++ b/src/index.html
@@ -412,7 +412,7 @@
           </a>
         </div>
         <div class="col">
-          <a href="map.html?uuid=df595e60-6287-4623-8317-4b8d6f82e2e5&panel=海情/海象資訊">
+          <a href="map.html?panel=weather&uuid=df595e60-6287-4623-8317-4b8d6f82e2e5">
             <button class="btn OrchidPurple scoll">海況影像</button>
           </a>
         </div>
